2000-04-03  Jason Leach  <leach@wam.umd.edu>

	* gedit-undo.c (gedit_undo_add): fix for the double CTRL-K crash
	just added to BUGS

	* gedit.c (main): who added the && FALSE to the
	if (g_list_length(mdi->children) == 0) ?  Took that out.

	* gE_view.c (popup_menu): cleaned up this GnomeUIInfo

	* commands.c: removed 5 unnecessar #includes
	(file_quit_cb): lets quit via gtk_main_quit() rather than a
	gtk_exit(0);
	(recent_update_menus): don't need to if() before g_free()
	(recent_update): replace resource heavy g_list_length calls with
	an integer counter.

2000-04-03  Chema Celorio  <chema@celorio.com>

	* gedit-menus.c (gedit_menu): When compiling
	without plugin support, do not show plugin menu
	entry
	* BUGS : added a bug { CTRL+K }

2000-04-03  Jason Leach  <leach@wam.umd.edu>

	* gE_mdi.c (gedit_document_destroy): fixed a crash when gedit
	tries to open a document without read permissions, and then when
	you go to exit.
	(gedit_document_new_with_file): bugfix with having the a busted up
	gedit when you try and open files you don't have access to.

	* gE_window.c (gedit_window_set_status_bar): new function, it will
	change your life (if your life is lacking dynamic control of
	enabling/disabling the statusbar)

	* gE_prefs_box.c (gedit_apply): fixed a bug where everytime you
	pressed OK in the preferences, it would run the apply callback
	twice, that's like, way lame and stuff.

2000-04-03  Chema Celorio  <chema@celorio.com>
	* gedit-undo.c (views_insert): fixed a cursor positioning problem
	  when undoing
	  (views_delete): ditto basiclly thaw gtk_text befor
   	  inserting/deleting this keeps the cursor in the correct position
	
2000-04-02  Jason Leach  <leach@wam.umd.edu>

	* gE_mdi.c (get_untitled_as_string): made static
	(gedit_document_new): woops, broke something here, its fixed.

	* *.[ch]: perl -p -i -e 's/gE_/gedit_/' changing all instances of
	gE_ to gedit_, meaning our #include lines are busted right now,
	will fix asap.
